force-app/main/default/objects/OrderSummary/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Billing Address Order Summaries</relationshipLabel>
    <relationshipName>BillingAddressOrderSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>