force-app/main/default/objects/OrderSummary/fields/Card_Display_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Display_Number__c</fullName>
    <label>Card Display Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>