force-app/main/default/objects/OrderSummary/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instructions__c</fullName>
    <label>Delivery Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>