force-app/main/default/objects/OrderSummary/fields/MISC_Charges__c.field-meta.xml
<CustomField>
    <fullName>MISC_Charges__c</fullName>
    <formula>TotalAdjustedDeliveryAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MISC Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>