force-app/main/default/objects/OrderSummary/fields/Origin_Cart__c.field-meta.xml
<CustomField>
    <fullName>Origin_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>OrderSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>