force-app/main/default/objects/OrderSummary/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Shipping Address Order Summaries</relationshipLabel>
    <relationshipName>ShippingAddressOrderSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>