force-app/main/default/objects/OrderSummary/fields/Split_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Split_Group_ID__c</fullName>
    <description>id field that ties together order splits</description>
    <inlineHelpText>id field that ties together order splits</inlineHelpText>
    <label>Split Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>