force-app/main/default/objects/OrderSummary/listViews/all_order_summaries.listView-meta.xml
<ListView>
    <fullName>all_order_summaries</fullName>
    <columns>Order_Type__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Name</columns>
    <columns>OrderedDate</columns>
    <columns>Created_By_Name__c</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>TotalAdjustedProduc981</columns>
    <columns>MISC_Charges__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Order Summaries</label>
</ListView>