force-app/main/default/objects/OrderSummary/listViews/Requisition_Orders.listView-meta.xml
<ListView>
    <fullName>Requisition_Orders</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Created_By_Name__c</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Requistion_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_Pending_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Requisition Orders</label>
</ListView>